--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">GeoTask</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_maps">MapsActivity</string>
+    <string name="fab_add_task_desc">Add Task</string>
+    <string name="plan_route">Plan Route</string>
+    <string name="task_list_content_description">List of tasks to complete</string>
+    <string name="map_fragment_label">Task Map View</string>
 </resources>
